Reports and Models

--- a/Creadit_fraud_EDA.ipynb
+++ b/Creadit_fraud_EDA.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Creadit Fraud EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This dataset presents transactions that occurred in two days, where we have **305** frauds out of 170,884 transactions. The dataset is highly **Imbalanced**, the positive class (frauds) account for **0.178%** of all transactions.\n",
     "\n",
     "The dataset includes only numerical input variables resulting from a PCA transformation. Due to confidentiality reasons, the original features and background information about the data are not provided.\n",
@@ -17,6 +24,13 @@
     "- Amount: The transaction amount, which can be used for cost-sensitive learning.\n",
     "\n",
     "- Class: The target variable, with 1 indicating fraud and 0 indicating non-fraud.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------"
    ]
   },
   {
